      if configured in the settings (patch 3370466). The UI behavior of adding an entry
      at "new entry from plain text" is now similar to "new entry".
    - An entry can be sent by a right click on an entry and select "Send as Email"
      (patch 3306271).
    - Added option to "copy BibTeX key and title" (patch 3370471).
    - Switched from PDFBox 0.7.3 to PDFBox 1.6.0.
2.7.1
    - DocBook export format switched to 4.4 (based on patch 3313898).
2.7
    - Medline importer now wraps multipart last names in braces.
    - RIS importer now handles multiple title fields by concatenation.
    - Disallowed "comment" as entry type name, since this conflicts with the BibTeX format.
    - Fixed handling of suffix name parts (Jr, etc.) in Medline importer.
    - Added optional second numeric argument to Authors formatter, which determines
      how many authors are shown if the maximum number is exceeded.
    - Added content selector for "review" field in entry editor.
    - Improved detection of file type when adding new link. Can now recognize double
      extensions such as ".ps.gz".
    - Improved autocompletion of author names. Added options to complete either in
      'Firstname Lastname' or 'Lastname, Firstname' formats, or in both.
    - Fixed bug in import function if no suitable import filter is found.
2.7 beta 2
    - Added support for MrdLib lookup or metadata extraction when PDFs are dragged into
      JabRef.
    - Added option under "External programs" for disabling the automatic opening of the
      Browse dialog when creating a new file link.
    - Fixed shortcut key collision. Shortcut for Import to new database is now Ctrl-Alt-I.
    - The "Open URL or DOI" action now uses URL links in the "file" field as fallback if
      no links are found in the "url" or "doi" fields.
    - Restricted remote listener port numbers to interval 1025-65535.
    - Added Japanese translation by Koji Yokota.